Fix stretched picture in market.

--- a/src/components/Recommend.css
+++ b/src/components/Recommend.css
@@ -17,10 +17,13 @@
 }
 
 .recommend-photo-card {
-    height: 150px;
+    height: 130px;
     width: 100%;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
+    background-size: cover !important;   
+    background-repeat: no-repeat !important;
+    background-position: center !important;
 }
 
 .recommend-text-card {
